--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "next": "^10.0.8",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^2.0.3"
   }
 }
