--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/star123good/react-next.js-sample-project#readme",
   "dependencies": {
     "next": "^10.0.8",
+    "next-routes": "^1.4.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "semantic-ui-css": "^2.4.1",
